@startuml erd_product
title Hình 3.36 — ERD — Nhóm Sản phẩm (Product Catalog)

skinparam class {
    BackgroundColor #E8F0FE
    BorderColor #1A73E8
}

entity "CATEGORY" as category {
    * id : bigint <<PK>>
    --
    * name : varchar <<UK>>
    description : text
    parent_id : bigint <<FK>>
    * level : int
    * created_at : timestamp
    * updated_at : timestamp
}

entity "BRAND" as brand {
    * id : bigint <<PK>>
    --
    * name : varchar <<UK>>
    logo_url : varchar
    description : text
}

entity "PRODUCT" as product {
    * id : bigint <<PK>>
    --
    * name : varchar
    * sku : varchar <<UK>>
    * slug : varchar <<UK>>
    * original_price : decimal
    * selling_price : decimal
    description : text
    * category_id : bigint <<FK>>
    * brand_id : bigint <<FK>>
    * condition : varchar
    * status : varchar
    * created_at : timestamp
    * updated_at : timestamp
}

entity "ATTRIBUTE" as attribute {
    * id : bigint <<PK>>
    --
    * name : varchar
    * category_id : bigint <<FK>>
}

entity "ATTRIBUTE_VALUE" as attr_val {
    * id : bigint <<PK>>
    --
    * attribute_id : bigint <<FK>>
    * value : varchar
}

entity "PRODUCT_ATTRIBUTE" as prod_attr {
    * product_id : bigint <<PK, FK>>
    * attribute_id : bigint <<PK, FK>>
    --
    * attribute_value_id : bigint <<FK>>
}

entity "PRODUCT_IMAGE" as prod_img {
    * id : bigint <<PK>>
    --
    * product_id : bigint <<FK>>
    * image_url : varchar
    * is_primary : boolean
    * sort_order : int
}

category ||--o{ category : "parent"
category ||--o{ product : "contains"
category ||--o{ attribute : "defines"
brand ||--o{ product : "produces"
attribute ||--o{ attr_val : "has values"
product ||--o{ prod_attr : "has attributes"
product ||--o{ prod_img : "has images"
attribute ||--o{ prod_attr : "referenced by"
attr_val ||--o{ prod_attr : "referenced by"

@enduml
